--- a/macro_pad/platformio.ini
+++ b/macro_pad/platformio.ini
@@ -14,5 +14,5 @@ board = seeed_xiao_rp2040
 framework = arduino
 board_build.core = earlephilhower
 lib_deps = adafruit/Adafruit TinyUSB Library@^1.14.1
-; Adafruit TinyUSB
-build_flags = -DUSE_TINYUSB
+build_flags = -DUSE_TINYUSB -std=gnu++20
+build_unflags = -std=gnu++17
