--- a/macro_pad/platformio.ini
+++ b/macro_pad/platformio.ini
@@ -13,6 +13,8 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = seeed_xiao_rp2040
 framework = arduino
 board_build.core = earlephilhower
-lib_deps = adafruit/Adafruit TinyUSB Library@^1.14.1
+lib_deps = 
+	adafruit/Adafruit TinyUSB Library@^1.14.1
+	bblanchon/ArduinoJson@^6.19.4
 build_flags = -DUSE_TINYUSB -std=gnu++20
 build_unflags = -std=gnu++17
